msfwk-testnosql/ms-paymentorder-package/ms-paymentorder-package-docker/src/docker/k8/on-premise/streams/ponosql-ingress.yaml
#
# *******************************************************************************
# * Copyright © Temenos Headquarters SA 2021. All rights reserved.
# *******************************************************************************
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ponosql-ingress
spec:
  rules:
  - host: ponosqlapi.com
    http:
      paths:
      - path: /
        backend:
          serviceName: paymentorder-poapisvcnp
          servicePort: 8080
